make background layer position fixed to fix overflow in chrome

--- a/src/assets/styles/popup.scss
+++ b/src/assets/styles/popup.scss
@@ -1,11 +1,12 @@
 @use 'base';
 
 body {
-	width: 226px;
-	height: 220px;
+	max-width: 226px;
+	min-width: 226px;
+	max-height: 220px;
+	min-height: 220px;
 	background-color: base.$primary;
 	position: relative;
-	overflow: hidden;
 
 	#root {
 		width: 100%;
@@ -14,6 +15,7 @@ body {
 
 		.background-layer {
 			z-index: -1;
+			position: fixed;
 			width: 100%;
 			height: 100%;
 		}
